--- a/frontend/src/components/ViewReviews/Suites/SuiteCard.css
+++ b/frontend/src/components/ViewReviews/Suites/SuiteCard.css
@@ -15,6 +15,7 @@ svg {
     height: 280px;
     width: 450px;
     border-color: #fff;
+    background-color: #fff;
     border: 1px solid rgb(255, 255, 255);
     box-shadow: 0 6px 15px rgba(56, 125, 255, 0.07); 
     border-radius: 8px;
@@ -67,7 +68,7 @@ svg {
 
 .room-badge { 
     border-radius: 24px;
-    font-size: 14pt;
+    font-size: 13pt;
     font-weight: 700;
     padding: 4px 12px;
     color: #0053C5;
@@ -142,7 +143,7 @@ svg {
     }
 
     .room-badge {
-        font-size: 13pt;
+        font-size: 10.5pt;
         padding: 0.1px 4px;
     }
 
@@ -170,7 +171,7 @@ svg {
     }
 
     .room-badge {
-        font-size: 11pt;
+        font-size: 9pt;
     }
 
     .room-badge-gray {
